fixing hero image on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -13,8 +13,8 @@
 
 .heroImage {
   border-radius: 50%; /* Makes the image circular */
-  width: 25%; /* Adjust width */
-  height: 25%; /* Adjust height */
+  height: 50%; /* Adjust height */
+  width: auto;
   object-fit: cover; /* Ensures the image is cropped nicely if it's not square */
 }
 
